Bug 1720635 [wpt PR 29671] - Rename scrollbar-gutter "mirror" to "both-edges", a=testonly
Automatic update from web-platform-tests
Rename scrollbar-gutter "mirror" to "both-edges"

For clarity, the "mirror" value of the scrollbar-gutter property has
been renamed to "both-edges". The functionality remains the same.

CSS WG: https://github.com/w3c/csswg-drafts/issues/6349

Bug: 710214
Change-Id: I65683037e083f2edee21451f54a9ef34374d0988
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3026774
Reviewed-by: Philip Rogers <pdrchromium.org>
Commit-Queue: Felipe Erias <felipeeriasigalia.com>
Cr-Commit-Position: refs/heads/master{#902287}

--

wpt-commits: 43b8e825b9d0bd67f812c08618266e6501b6da6e
wpt-pr: 29671

UltraBlame original commit: 2a9223785db59ee3110c116eada576352416c3f8

--- a/testing/web-platform/tests/css/css-overflow/parsing/scrollbar-gutter-valid.html
+++ b/testing/web-platform/tests/css/css-overflow/parsing/scrollbar-gutter-valid.html
@@ -201,7 +201,9 @@ gutter
 "
 "
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -213,12 +215,16 @@ scrollbar
 gutter
 "
 "
-mirror
+both
+-
+edges
 stable
 "
 "
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
