--- a/testing/web-platform/tests/css/css-overflow/scrollbar-gutter-001.html
+++ b/testing/web-platform/tests/css/css-overflow/scrollbar-gutter-001.html
@@ -275,7 +275,9 @@ scrollbar
 gutter
 :
 stable
-mirror
+both
+-
+edges
 ;
 }
 /
@@ -799,7 +801,9 @@ content_auto_stable_mirror
 auto
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -839,7 +843,9 @@ content_scroll_stable_mirror
 scroll
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -879,7 +885,9 @@ content_visible_stable_mirror
 visible
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -919,7 +927,9 @@ content_hidden_stable_mirror
 hidden
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -959,7 +969,9 @@ content_clip_stable_mirror
 clip
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -1702,7 +1714,9 @@ scrollbar
 gutter
 :
 stable
-mirror
+both
+-
+edges
 test
 (
 function
@@ -1800,7 +1814,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -1901,7 +1917,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -1971,7 +1989,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -2072,7 +2092,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -2142,7 +2164,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
