--- a/testing/web-platform/tests/css/css-overflow/scrollbar-gutter-vertical-lr-001.html
+++ b/testing/web-platform/tests/css/css-overflow/scrollbar-gutter-vertical-lr-001.html
@@ -263,7 +263,9 @@ scrollbar
 gutter
 :
 stable
-mirror
+both
+-
+edges
 ;
 }
 /
@@ -787,7 +789,9 @@ content_auto_stable_mirror
 auto
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -827,7 +831,9 @@ content_scroll_stable_mirror
 scroll
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -867,7 +873,9 @@ content_visible_stable_mirror
 visible
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -907,7 +915,9 @@ content_hidden_stable_mirror
 hidden
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -947,7 +957,9 @@ content_clip_stable_mirror
 clip
 /
 stable
-mirror
+both
+-
+edges
 <
 /
 div
@@ -1690,7 +1702,9 @@ scrollbar
 gutter
 :
 stable
-mirror
+both
+-
+edges
 test
 (
 function
@@ -1788,7 +1802,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -1889,7 +1905,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -1959,7 +1977,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -2060,7 +2080,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
@@ -2130,7 +2152,9 @@ scrollbar
 -
 gutter
 stable
-mirror
+both
+-
+edges
 "
 )
 ;
