Bug 1720811 [wpt PR 29683] - [LayoutNG] More OOF writing mode fixes in multicol, a=testonly
Automatic update from web-platform-tests
[LayoutNG] More OOF writing mode fixes in multicol

1. Previously, we had used the writing mode of the CB when setting
up the NodeInfo in NGOutOfFlowLayoutPart. However, we want to use the
writing mode of the builder instead since the OOF will be laid out
inside the fragmentainer children of the builder rather than the CB
itself (in the case of fragmentation).

2. When creating the CB rect for inline CB's, the start offset that
was used was relative to the inline's containing block. However,
since the OOF is laid out inside the fragmentainers, we need to
convert the inline CB's rect to take the writing mode of the multicol
into account.

The added tests are similar to those added in CL:3025848, but they
apply block/inline insets rather than using the static position.
The tests added in CL:3025848 were moved to a common directory
as those added in this CL.

Bug: 1228746
Change-Id: I6073683137d3bf58eea8ce6f355321e75046fb50
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3032909
Reviewed-by: Morten Stenshorne <mstenshochromium.org>
Commit-Queue: Alison Maher <almahermicrosoft.com>
Cr-Commit-Position: refs/heads/master{#902447}

--

wpt-commits: 6ec8995cb9ae8922ca539ff2c6737f48142f7d03
wpt-pr: 29683

UltraBlame original commit: 72c6189e2aeb3d036af9da2b26b617233daf50cb

--- a/testing/web-platform/tests/css/css-position/multicol/vlr-ltr-ltr-in-multicols.html
+++ b/testing/web-platform/tests/css/css-position/multicol/vlr-ltr-ltr-in-multicols.html
@@ -53,7 +53,7 @@ vlr
 -
 in
 -
-multicol
+multicols
 -
 ref
 .
@@ -144,7 +144,7 @@ green
 ;
 font
 :
-16px
+20px
 /
 1
 Ahem
@@ -159,7 +159,7 @@ block
 -
 size
 :
-100px
+120px
 ;
 color
 :
@@ -191,7 +191,7 @@ block
 -
 size
 :
-100px
+60px
 ;
 inline
 -
@@ -249,10 +249,18 @@ absolute
 ;
 }
 .
-zero
+inset
 -
-inline
+start
 {
+inset
+-
+block
+-
+start
+:
+0
+;
 inset
 -
 inline
@@ -263,15 +271,23 @@ start
 ;
 }
 .
-zero
+inset
 -
-block
+end
 {
 inset
 -
 block
 -
-start
+end
+:
+0
+;
+inset
+-
+inline
+-
+end
 :
 0
 ;
@@ -300,10 +316,22 @@ class
 =
 "
 container
-rtl
+ltr
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 span
 class
@@ -320,6 +348,9 @@ class
 "
 abs
 inline
+inset
+-
+end
 "
 >
 XX
@@ -327,6 +358,134 @@ XX
 /
 div
 >
+XXXX
+XXXX
+XXXX
+XXXX
+XX
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+ltr
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+span
+class
+=
+"
+ltr
+"
+>
+X
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+br
+>
+XX
 <
 span
 class
@@ -349,12 +508,24 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
 "
 container
-rtl
+ltr
 "
 >
 X
@@ -364,9 +535,126 @@ class
 =
 "
 ltr
+cb
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+XX
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+ltr
 "
 >
 X
+<
+span
+class
+=
+"
+ltr
+cb
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -374,6 +662,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -406,38 +718,33 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
 "
 container
-rtl
+ltr
 "
 >
-X
 <
 span
 class
 =
 "
-ltr
 cb
 "
->
-X
-<
-div
-class
-=
-"
-abs
-inline
-"
->
-XX
-<
-/
-div
 >
 <
 span
@@ -452,90 +759,6 @@ XX
 /
 span
 >
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-rtl
-"
->
-X
-<
-span
-class
-=
-"
-ltr
-cb
-"
->
-X
-<
-div
-class
-=
-"
-abs
-block
-"
->
-XX
-<
-/
-div
->
-<
-br
->
-<
-span
-class
-=
-"
-red
-"
->
-XX
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-rtl
-"
->
-<
-span
-class
-=
-"
-cb
-"
->
-X
 <
 span
 class
@@ -552,6 +775,9 @@ class
 "
 abs
 inline
+inset
+-
+end
 "
 >
 XX
@@ -559,6 +785,28 @@ XX
 /
 div
 >
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+X
 <
 span
 class
@@ -585,12 +833,24 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
 "
 container
-rtl
+ltr
 "
 >
 <
@@ -601,7 +861,19 @@ class
 cb
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 span
 class
@@ -618,6 +890,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -628,6 +924,7 @@ div
 <
 br
 >
+X
 <
 span
 class
