--- a/testing/web-platform/tests/css/css-position/multicol/vrl-ltr-ltr-in-multicols.html
+++ b/testing/web-platform/tests/css/css-position/multicol/vrl-ltr-ltr-in-multicols.html
@@ -49,11 +49,11 @@ match
 href
 =
 "
-vlr
+vrl
 -
 in
 -
-multicol
+multicols
 -
 ref
 .
@@ -128,7 +128,7 @@ mode
 :
 vertical
 -
-lr
+rl
 ;
 }
 .
@@ -144,7 +144,7 @@ green
 ;
 font
 :
-16px
+20px
 /
 1
 Ahem
@@ -159,7 +159,7 @@ block
 -
 size
 :
-100px
+120px
 ;
 color
 :
@@ -191,7 +191,7 @@ block
 -
 size
 :
-100px
+60px
 ;
 inline
 -
@@ -249,10 +249,18 @@ absolute
 ;
 }
 .
-zero
+inset
 -
-inline
+start
 {
+inset
+-
+block
+-
+start
+:
+0
+;
 inset
 -
 inline
@@ -263,15 +271,23 @@ start
 ;
 }
 .
-zero
+inset
 -
-block
+end
 {
 inset
 -
 block
 -
-start
+end
+:
+0
+;
+inset
+-
+inline
+-
+end
 :
 0
 ;
@@ -300,16 +316,28 @@ class
 =
 "
 container
-rtl
+ltr
 "
 >
-X
 <
 span
 class
 =
 "
-rtl
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+span
+class
+=
+"
+ltr
 "
 >
 X
@@ -320,6 +348,9 @@ class
 "
 abs
 inline
+inset
+-
+end
 "
 >
 XX
@@ -327,6 +358,134 @@ XX
 /
 div
 >
+XXXX
+XXXX
+XXXX
+XXXX
+XX
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+ltr
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+span
+class
+=
+"
+ltr
+"
+>
+X
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+br
+>
+XX
 <
 span
 class
@@ -349,12 +508,24 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
 "
 container
-rtl
+ltr
 "
 >
 X
@@ -363,10 +534,127 @@ span
 class
 =
 "
-rtl
+ltr
+cb
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+XX
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+ltr
 "
 >
 X
+<
+span
+class
+=
+"
+ltr
+cb
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -374,6 +662,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -406,22 +718,53 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
 "
 container
-rtl
+ltr
 "
 >
-X
 <
 span
 class
 =
 "
-rtl
 cb
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+span
+class
+=
+"
+ltr
 "
 >
 X
@@ -432,6 +775,9 @@ class
 "
 abs
 inline
+inset
+-
+end
 "
 >
 XX
@@ -439,112 +785,10 @@ XX
 /
 div
 >
-<
-span
-class
-=
-"
-red
-"
->
+XXXX
+XXXX
+XXXX
 XX
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-rtl
-"
->
-X
-<
-span
-class
-=
-"
-rtl
-cb
-"
->
-X
-<
-div
-class
-=
-"
-abs
-block
-"
->
-XX
-<
-/
-div
->
-<
-br
->
-<
-span
-class
-=
-"
-red
-"
->
-XX
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-rtl
-"
->
-<
-span
-class
-=
-"
-cb
-"
->
-X
-<
-span
-class
-=
-"
-rtl
-"
->
-X
 <
 div
 class
@@ -552,6 +796,9 @@ class
 "
 abs
 inline
+inset
+-
+start
 "
 >
 XX
@@ -559,6 +806,7 @@ XX
 /
 div
 >
+X
 <
 span
 class
@@ -585,12 +833,24 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
 "
 container
-rtl
+ltr
 "
 >
 <
@@ -601,13 +861,25 @@ class
 cb
 "
 >
-X
 <
 span
 class
 =
 "
-rtl
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+span
+class
+=
+"
+ltr
 "
 >
 X
@@ -618,6 +890,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -628,6 +924,7 @@ div
 <
 br
 >
+X
 <
 span
 class
