--- a/testing/web-platform/tests/css/css-position/multicol/vrl-ltr-rtl-in-multicols.tentative.html
+++ b/testing/web-platform/tests/css/css-position/multicol/vrl-ltr-rtl-in-multicols.tentative.html
@@ -49,11 +49,11 @@ match
 href
 =
 "
-vlr
+vrl
 -
 in
 -
-multicol
+multicols
 -
 ref
 .
@@ -128,7 +128,7 @@ mode
 :
 vertical
 -
-lr
+rl
 ;
 }
 .
@@ -144,7 +144,7 @@ green
 ;
 font
 :
-16px
+20px
 /
 1
 Ahem
@@ -159,7 +159,7 @@ block
 -
 size
 :
-100px
+120px
 ;
 color
 :
@@ -191,7 +191,7 @@ block
 -
 size
 :
-100px
+60px
 ;
 inline
 -
@@ -249,10 +249,18 @@ absolute
 ;
 }
 .
-zero
+inset
 -
-inline
+start
 {
+inset
+-
+block
+-
+start
+:
+0
+;
 inset
 -
 inline
@@ -263,15 +271,23 @@ start
 ;
 }
 .
-zero
+inset
 -
-block
+end
 {
 inset
 -
 block
 -
-start
+end
+:
+0
+;
+inset
+-
+inline
+-
+end
 :
 0
 ;
@@ -303,7 +319,7 @@ container
 ltr
 "
 >
-X
+XX
 <
 span
 class
@@ -311,21 +327,6 @@ class
 "
 rtl
 "
->
-X
-<
-div
-class
-=
-"
-abs
-inline
-"
->
-XX
-<
-/
-div
 >
 <
 span
@@ -341,12 +342,76 @@ XX
 span
 >
 <
+div
+class
+=
+"
+abs
+inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+XX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
 /
 span
 >
 <
 /
 div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
 >
 <
 div
@@ -357,7 +422,7 @@ container
 ltr
 "
 >
-X
+XX
 <
 span
 class
@@ -366,7 +431,19 @@ class
 rtl
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -374,6 +451,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -397,6 +498,7 @@ XX
 /
 span
 >
+XX
 <
 /
 span
@@ -404,6 +506,18 @@ span
 <
 /
 div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
 >
 <
 div
@@ -414,7 +528,7 @@ container
 ltr
 "
 >
-X
+XX
 <
 span
 class
@@ -424,7 +538,19 @@ rtl
 cb
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -432,6 +558,9 @@ class
 "
 abs
 inline
+inset
+-
+end
 "
 >
 XX
@@ -439,6 +568,28 @@ XX
 /
 div
 >
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+XX
 <
 span
 class
@@ -461,6 +612,18 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
@@ -469,7 +632,7 @@ container
 ltr
 "
 >
-X
+XX
 <
 span
 class
@@ -479,7 +642,19 @@ rtl
 cb
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -487,6 +662,259 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+br
+>
+XX
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+ltr
+"
+>
+<
+span
+class
+=
+"
+cb
+"
+>
+X
+<
+span
+class
+=
+"
+rtl
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+X
+<
+/
+span
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+ltr
+"
+>
+<
+span
+class
+=
+"
+cb
+"
+>
+X
+<
+span
+class
+=
+"
+rtl
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -510,137 +938,7 @@ XX
 /
 span
 >
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-ltr
-"
->
-<
-span
-class
-=
-"
-cb
-"
->
 X
-<
-span
-class
-=
-"
-rtl
-"
->
-X
-<
-div
-class
-=
-"
-abs
-inline
-"
->
-XX
-<
-/
-div
->
-<
-span
-class
-=
-"
-red
-"
->
-XX
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-ltr
-"
->
-<
-span
-class
-=
-"
-cb
-"
->
-X
-<
-span
-class
-=
-"
-rtl
-"
->
-X
-<
-div
-class
-=
-"
-abs
-block
-"
->
-XX
-<
-/
-div
->
-<
-br
->
-<
-span
-class
-=
-"
-red
-"
->
-XX
-<
-/
-span
->
 <
 /
 span
