--- a/testing/web-platform/tests/css/css-position/multicol/vrl-rtl-rtl-in-multicols.html
+++ b/testing/web-platform/tests/css/css-position/multicol/vrl-rtl-rtl-in-multicols.html
@@ -53,7 +53,7 @@ vrl
 -
 in
 -
-multicol
+multicols
 -
 ref
 .
@@ -144,7 +144,7 @@ green
 ;
 font
 :
-16px
+20px
 /
 1
 Ahem
@@ -159,7 +159,7 @@ block
 -
 size
 :
-100px
+120px
 ;
 color
 :
@@ -191,7 +191,7 @@ block
 -
 size
 :
-100px
+60px
 ;
 inline
 -
@@ -249,10 +249,18 @@ absolute
 ;
 }
 .
-zero
+inset
 -
-inline
+start
 {
+inset
+-
+block
+-
+start
+:
+0
+;
 inset
 -
 inline
@@ -263,15 +271,23 @@ start
 ;
 }
 .
-zero
+inset
 -
-block
+end
 {
 inset
 -
 block
 -
-start
+end
+:
+0
+;
+inset
+-
+inline
+-
+end
 :
 0
 ;
@@ -312,7 +328,19 @@ class
 rtl
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -320,6 +348,240 @@ class
 "
 abs
 inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+XX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+rtl
+"
+>
+X
+<
+span
+class
+=
+"
+rtl
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+br
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+XX
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+rtl
+"
+>
+X
+<
+span
+class
+=
+"
+rtl
+cb
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
 "
 >
 XX
@@ -340,6 +602,7 @@ XX
 /
 span
 >
+XX
 <
 /
 span
@@ -347,6 +610,18 @@ span
 <
 /
 div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
 >
 <
 div
@@ -364,9 +639,22 @@ class
 =
 "
 rtl
+cb
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -374,6 +662,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -406,12 +718,32 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
 "
 container
 rtl
+"
+>
+<
+span
+class
+=
+"
+cb
 "
 >
 X
@@ -421,10 +753,21 @@ class
 =
 "
 rtl
-cb
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -432,6 +775,30 @@ class
 "
 abs
 inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
 "
 >
 XX
@@ -452,6 +819,11 @@ XX
 /
 span
 >
+X
+<
+/
+span
+>
 <
 /
 span
@@ -459,6 +831,18 @@ span
 <
 /
 div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
 >
 <
 div
@@ -469,6 +853,14 @@ container
 rtl
 "
 >
+<
+span
+class
+=
+"
+cb
+"
+>
 X
 <
 span
@@ -476,10 +868,21 @@ class
 =
 "
 rtl
-cb
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -487,6 +890,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -510,137 +937,7 @@ XX
 /
 span
 >
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-rtl
-"
->
-<
-span
-class
-=
-"
-cb
-"
->
 X
-<
-span
-class
-=
-"
-rtl
-"
->
-X
-<
-div
-class
-=
-"
-abs
-inline
-"
->
-XX
-<
-/
-div
->
-<
-span
-class
-=
-"
-red
-"
->
-XX
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-rtl
-"
->
-<
-span
-class
-=
-"
-cb
-"
->
-X
-<
-span
-class
-=
-"
-rtl
-"
->
-X
-<
-div
-class
-=
-"
-abs
-block
-"
->
-XX
-<
-/
-div
->
-<
-br
->
-<
-span
-class
-=
-"
-red
-"
->
-XX
-<
-/
-span
->
 <
 /
 span
