--- a/testing/web-platform/tests/css/css-position/multicol/static-position/vlr-ltr-ltr-in-multicol.html
+++ b/testing/web-platform/tests/css/css-position/multicol/static-position/vlr-ltr-ltr-in-multicol.html
@@ -49,7 +49,7 @@ match
 href
 =
 "
-vrl
+vlr
 -
 in
 -
@@ -128,7 +128,7 @@ mode
 :
 vertical
 -
-rl
+lr
 ;
 }
 .
@@ -248,34 +248,6 @@ position
 absolute
 ;
 }
-.
-zero
--
-inline
-{
-inset
--
-inline
--
-start
-:
-0
-;
-}
-.
-zero
--
-block
-{
-inset
--
-block
--
-start
-:
-0
-;
-}
 <
 /
 style
@@ -300,7 +272,7 @@ class
 =
 "
 container
-rtl
+ltr
 "
 >
 X
@@ -309,7 +281,7 @@ span
 class
 =
 "
-rtl
+ltr
 "
 >
 X
@@ -354,7 +326,7 @@ class
 =
 "
 container
-rtl
+ltr
 "
 >
 X
@@ -363,7 +335,7 @@ span
 class
 =
 "
-rtl
+ltr
 "
 >
 X
@@ -411,7 +383,7 @@ class
 =
 "
 container
-rtl
+ltr
 "
 >
 X
@@ -420,7 +392,7 @@ span
 class
 =
 "
-rtl
+ltr
 cb
 "
 >
@@ -466,7 +438,7 @@ class
 =
 "
 container
-rtl
+ltr
 "
 >
 X
@@ -475,7 +447,7 @@ span
 class
 =
 "
-rtl
+ltr
 cb
 "
 >
@@ -524,7 +496,7 @@ class
 =
 "
 container
-rtl
+ltr
 "
 >
 <
@@ -541,7 +513,7 @@ span
 class
 =
 "
-rtl
+ltr
 "
 >
 X
@@ -590,7 +562,7 @@ class
 =
 "
 container
-rtl
+ltr
 "
 >
 <
@@ -607,7 +579,7 @@ span
 class
 =
 "
-rtl
+ltr
 "
 >
 X
