--- a/testing/web-platform/tests/css/css-position/multicol/static-position/vlr-rtl-ltr-in-multicol.tentative.html
+++ b/testing/web-platform/tests/css/css-position/multicol/static-position/vlr-rtl-ltr-in-multicol.tentative.html
@@ -49,7 +49,7 @@ match
 href
 =
 "
-vrl
+vlr
 -
 in
 -
@@ -128,7 +128,7 @@ mode
 :
 vertical
 -
-rl
+lr
 ;
 }
 .
@@ -248,34 +248,6 @@ position
 absolute
 ;
 }
-.
-zero
--
-inline
-{
-inset
--
-inline
--
-start
-:
-0
-;
-}
-.
-zero
--
-block
-{
-inset
--
-block
--
-start
-:
-0
-;
-}
 <
 /
 style
@@ -300,7 +272,7 @@ class
 =
 "
 container
-ltr
+rtl
 "
 >
 X
@@ -354,7 +326,7 @@ class
 =
 "
 container
-ltr
+rtl
 "
 >
 X
@@ -411,7 +383,7 @@ class
 =
 "
 container
-ltr
+rtl
 "
 >
 X
@@ -466,7 +438,7 @@ class
 =
 "
 container
-ltr
+rtl
 "
 >
 X
@@ -524,7 +496,7 @@ class
 =
 "
 container
-ltr
+rtl
 "
 >
 <
@@ -590,7 +562,7 @@ class
 =
 "
 container
-ltr
+rtl
 "
 >
 <
