--- a/testing/web-platform/tests/css/css-position/multicol/vlr-rtl-rtl-in-multicols.html
+++ b/testing/web-platform/tests/css/css-position/multicol/vlr-rtl-rtl-in-multicols.html
@@ -53,7 +53,7 @@ vlr
 -
 in
 -
-multicol
+multicols
 -
 ref
 .
@@ -144,7 +144,7 @@ green
 ;
 font
 :
-16px
+20px
 /
 1
 Ahem
@@ -159,7 +159,7 @@ block
 -
 size
 :
-100px
+120px
 ;
 color
 :
@@ -191,7 +191,7 @@ block
 -
 size
 :
-100px
+60px
 ;
 inline
 -
@@ -249,10 +249,18 @@ absolute
 ;
 }
 .
-zero
+inset
 -
-inline
+start
 {
+inset
+-
+block
+-
+start
+:
+0
+;
 inset
 -
 inline
@@ -263,15 +271,23 @@ start
 ;
 }
 .
-zero
+inset
 -
-block
+end
 {
 inset
 -
 block
 -
-start
+end
+:
+0
+;
+inset
+-
+inline
+-
+end
 :
 0
 ;
@@ -300,7 +316,7 @@ class
 =
 "
 container
-ltr
+rtl
 "
 >
 X
@@ -309,10 +325,22 @@ span
 class
 =
 "
-ltr
+rtl
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -320,6 +348,240 @@ class
 "
 abs
 inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+XX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+rtl
+"
+>
+X
+<
+span
+class
+=
+"
+rtl
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
+"
+>
+XX
+<
+/
+div
+>
+<
+br
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+XX
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
+div
+class
+=
+"
+container
+rtl
+"
+>
+X
+<
+span
+class
+=
+"
+rtl
+cb
+"
+>
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XXXX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
 "
 >
 XX
@@ -340,6 +602,7 @@ XX
 /
 span
 >
+XX
 <
 /
 span
@@ -347,6 +610,18 @@ span
 <
 /
 div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
 >
 <
 div
@@ -354,7 +629,7 @@ class
 =
 "
 container
-ltr
+rtl
 "
 >
 X
@@ -363,10 +638,23 @@ span
 class
 =
 "
-ltr
+rtl
+cb
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -374,6 +662,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -406,12 +718,32 @@ span
 div
 >
 <
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
+>
+<
 div
 class
 =
 "
 container
-ltr
+rtl
+"
+>
+<
+span
+class
+=
+"
+cb
 "
 >
 X
@@ -420,11 +752,22 @@ span
 class
 =
 "
-ltr
-cb
+rtl
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -432,6 +775,30 @@ class
 "
 abs
 inline
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+inline
+inset
+-
+start
 "
 >
 XX
@@ -452,6 +819,11 @@ XX
 /
 span
 >
+X
+<
+/
+span
+>
 <
 /
 span
@@ -459,6 +831,18 @@ span
 <
 /
 div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+multicol
+"
 >
 <
 div
@@ -466,7 +850,15 @@ class
 =
 "
 container
-ltr
+rtl
+"
+>
+<
+span
+class
+=
+"
+cb
 "
 >
 X
@@ -475,11 +867,22 @@ span
 class
 =
 "
-ltr
-cb
+rtl
 "
 >
-X
+<
+span
+class
+=
+"
+red
+"
+>
+XX
+<
+/
+span
+>
 <
 div
 class
@@ -487,6 +890,30 @@ class
 "
 abs
 block
+inset
+-
+end
+"
+>
+XX
+<
+/
+div
+>
+XXXX
+XXXX
+XXXX
+XX
+<
+div
+class
+=
+"
+abs
+block
+inset
+-
+start
 "
 >
 XX
@@ -510,137 +937,7 @@ XX
 /
 span
 >
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-ltr
-"
->
-<
-span
-class
-=
-"
-cb
-"
->
 X
-<
-span
-class
-=
-"
-ltr
-"
->
-X
-<
-div
-class
-=
-"
-abs
-inline
-"
->
-XX
-<
-/
-div
->
-<
-span
-class
-=
-"
-red
-"
->
-XX
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-container
-ltr
-"
->
-<
-span
-class
-=
-"
-cb
-"
->
-X
-<
-span
-class
-=
-"
-ltr
-"
->
-X
-<
-div
-class
-=
-"
-abs
-block
-"
->
-XX
-<
-/
-div
->
-<
-br
->
-<
-span
-class
-=
-"
-red
-"
->
-XX
-<
-/
-span
->
 <
 /
 span
