Bug 1720904 [wpt PR 29691] - [COEPForSharedWorker] Do not block worker with incompatible COEP, a=testonly
Automatic update from web-platform-tests
[COEPForSharedWorker] Do not block worker with incompatible COEP

Bug: 1226550
Change-Id: Id037a95461ac7931b0c14d62f0e7a295db06dd9b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3035102
Reviewed-by: Arthur Sonzogni <arthursonzognichromium.org>
Commit-Queue: Yifan Luo <lyfchromium.org>
Cr-Commit-Position: refs/heads/master{#902490}

--

wpt-commits: fc1ec16e468f57fa819defcd565f50bf5039a399
wpt-pr: 29691

UltraBlame original commit: 227147027c5268860448b40afd57516ce05d6722

--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/credentialless/shared-worker.tentative.https.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/credentialless/shared-worker.tentative.https.html
@@ -708,10 +708,7 @@ origin
 same_origin
 coep_none
 cookie_same_origin
-"
-Worker
-blocked
-"
+cookie_same_origin
 )
 ;
 sharedWorkerTest
@@ -740,10 +737,7 @@ origin
 cross_origin
 coep_none
 cookie_cross_origin
-"
-Worker
-blocked
-"
+cookie_cross_origin
 )
 ;
 sharedWorkerTest
