Bug 1716404 - Allow zero intersectionRatio in bug1406102.html. r=emilio
It's okay that we'd end up firing non-zero intersectionRatio records.

Differential Revision: https://phabricator.services.mozilla.com/D120142

UltraBlame original commit: 7aab3ebb7aa78a3ce17cbdbc2c03caac43f91a58

--- a/dom/base/test/test_bug1406102.html
+++ b/dom/base/test/test_bug1406102.html
@@ -223,23 +223,40 @@ changes
 .
 intersectionRatio
 >
+=
 0
 '
 intersectionRatio
 should
 be
+equal
+to
+or
 greater
 than
 zero
 '
 )
 ;
+if
+(
+changes
+[
+0
+]
+.
+intersectionRatio
+>
+0
+)
+{
 SimpleTest
 .
 finish
 (
 )
 ;
+}
 }
 )
 ;
