Bug 1698698 - Ensure event listener is registered on remote iframe before synthesizing mouse event; r=masayuki
It is not guaranteed that the task scheduled by SepcialPowers.spawn would be run
before the asynchronous synthesized mouse event. So rewrite the test to ensure
the event listener is ready on remote iframe before starting test.

Differential Revision: https://phabricator.services.mozilla.com/D120196

UltraBlame original commit: 911545677d2bb4f8b019eb0fdf2b421988419ee6

--- a/dom/tests/mochitest/pointerlock/file_pointerlock_xorigin_iframe_not_focused.html
+++ b/dom/tests/mochitest/pointerlock/file_pointerlock_xorigin_iframe_not_focused.html
@@ -541,7 +541,7 @@ unlocked
 ;
 }
 function
-waitForEvent
+addEventListenerOnRemote
 (
 aWin
 aEvent
@@ -571,18 +571,10 @@ for
 aEvent
 }
 event
+on
+remote
 )
 ;
-return
-new
-Promise
-(
-(
-aResolve
-)
-=
->
-{
 content
 .
 document
@@ -595,18 +587,113 @@ function
 e
 )
 {
+info
+(
+get
+{
+aEvent
+}
+event
+on
+remote
+)
+;
+content
+.
+parent
+.
+postMessage
+(
+aEvent
+"
+*
+"
+)
+;
+}
+)
+;
+}
+)
+;
+}
+function
+waitForMessage
+(
+aWin
+aMessage
+)
+{
+return
+new
+Promise
+(
+(
+aResolve
+)
+=
+>
+{
+info
+(
+wait
+for
+{
+aMessage
+}
+message
+)
+;
+window
+.
+addEventListener
+(
+"
+message
+"
+function
+handler
+(
+e
+)
+{
+info
+(
+get
+{
+e
+.
+data
+}
+message
+)
+;
+if
+(
+e
+.
+data
+=
+=
+=
+aMessage
+)
+{
+window
+.
+removeEventListener
+(
+"
+message
+"
+handler
+)
+;
 aResolve
 (
 )
 ;
 }
-{
-once
-:
-true
-}
-)
-;
 }
 )
 ;
@@ -667,10 +754,19 @@ requestPointerLock
 win
 )
 ;
+await
+addEventListenerOnRemote
+(
+win
+"
+mousemove
+"
+)
+;
 let
 promise
 =
-waitForEvent
+waitForMessage
 (
 win
 "
