Bug 1648944 - Part 2: Fire selectionchange at document from text controls r=masayuki,smaug
Differential Revision: https://phabricator.services.mozilla.com/D86701

UltraBlame original commit: a73cfada74cfa00ac2235708bd362c75e191f930

--- a/dom/tests/mochitest/general/frameSelectEvents.html
+++ b/dom/tests/mochitest/general/frameSelectEvents.html
@@ -270,6 +270,45 @@ a
 ;
 }
 /
+*
+*
+*
+param
+{
+Node
+}
+node
+*
+/
+function
+isProperSelectionChangeTarget
+(
+node
+)
+{
+return
+node
+=
+=
+=
+document
+|
+|
+node
+=
+=
+=
+input
+|
+|
+node
+=
+=
+=
+textarea
+;
+}
+/
 /
 The
 main
@@ -460,22 +499,27 @@ function
 aEvent
 )
 {
-is
+ok
+(
+isProperSelectionChangeTarget
 (
 aEvent
 .
-originalTarget
-document
+target
+)
 "
 The
-original
 target
 of
 selectionchange
 should
 be
-the
+one
+of
 document
+input
+or
+textarea
 "
 )
 ;
@@ -2431,7 +2475,7 @@ input
 mousemove
 "
 1
-0
+1
 1
 0
 )
@@ -2467,7 +2511,7 @@ input
 mousemove
 "
 0
-0
+1
 1
 0
 )
@@ -2486,7 +2530,7 @@ input
 mousemove
 "
 0
-0
+1
 1
 0
 )
@@ -2574,7 +2618,7 @@ input
 mousemove
 "
 1
-0
+1
 1
 0
 )
@@ -2678,7 +2722,7 @@ input
 click
 "
 0
-0
+1
 1
 0
 )
@@ -2742,7 +2786,7 @@ input
 mousedown
 "
 0
-0
+1
 1
 0
 )
@@ -2774,7 +2818,7 @@ input
 mousemove
 "
 1
-0
+1
 1
 0
 )
@@ -2954,7 +2998,7 @@ textarea
 mousemove
 "
 1
-0
+1
 0
 1
 )
@@ -2990,7 +3034,7 @@ textarea
 mousemove
 "
 0
-0
+1
 0
 1
 )
@@ -3009,7 +3053,7 @@ textarea
 mousemove
 "
 0
-0
+1
 0
 1
 )
@@ -3097,7 +3141,7 @@ textarea
 mousemove
 "
 1
-0
+1
 0
 1
 )
@@ -3201,7 +3245,7 @@ textarea
 click
 "
 0
-0
+1
 0
 1
 )
@@ -3265,7 +3309,7 @@ textarea
 mousedown
 "
 0
-0
+1
 0
 1
 )
@@ -3297,7 +3341,7 @@ textarea
 mousemove
 "
 1
-0
+1
 0
 1
 )
