Bug 1648944 - Part 3: Add tests for flags partially on r=annevk
Differential Revision: https://phabricator.services.mozilla.com/D86702

UltraBlame original commit: fb2b9ceb7c693a1b11f36ffa62aff69f77d7df5d

--- a/dom/tests/mochitest/general/frameSelectEvents.html
+++ b/dom/tests/mochitest/general/frameSelectEvents.html
@@ -361,7 +361,10 @@ async
 function
 UpdateSelectEventsOnTextControlsPref
 (
-aEnabled
+{
+selectstart
+selectionchange
+}
 )
 {
 await
@@ -387,7 +390,9 @@ selectstart
 .
 enabled
 '
-aEnabled
+!
+!
+selectstart
 ]
 [
 '
@@ -401,7 +406,9 @@ selectionchange
 .
 enabled
 '
-aEnabled
+!
+!
+selectionchange
 ]
 ]
 }
@@ -411,7 +418,14 @@ aEnabled
 await
 UpdateSelectEventsOnTextControlsPref
 (
+{
+selectstart
+:
 false
+selectionchange
+:
+false
+}
 )
 ;
 document
@@ -2427,10 +2441,26 @@ mouseup
 0
 )
 ;
+for
+(
+const
+selectstart
+of
+[
+1
+0
+]
+)
+{
 await
 UpdateSelectEventsOnTextControlsPref
 (
+{
+selectstart
+selectionchange
+:
 true
+}
 )
 ;
 await
@@ -2442,13 +2472,13 @@ elt
 input
 "
 )
-50
+40
 "
 mousedown
 "
 0
-0
-0
+1
+1
 0
 )
 ;
@@ -2474,7 +2504,7 @@ input
 "
 mousemove
 "
-1
+selectstart
 1
 1
 0
@@ -2525,7 +2555,7 @@ elt
 input
 "
 )
-50
+40
 "
 mousemove
 "
@@ -2568,7 +2598,7 @@ elt
 input
 "
 )
-50
+40
 "
 mousemove
 "
@@ -2617,7 +2647,7 @@ input
 "
 mousemove
 "
-1
+selectstart
 1
 1
 0
@@ -2817,7 +2847,7 @@ input
 "
 mousemove
 "
-1
+selectstart
 1
 1
 0
@@ -2842,10 +2872,18 @@ mouseup
 0
 )
 ;
+}
 await
 UpdateSelectEventsOnTextControlsPref
 (
+{
+selectstart
+:
 false
+selectionchange
+:
+false
+}
 )
 ;
 /
@@ -2945,10 +2983,26 @@ mouseup
 0
 )
 ;
+for
+(
+const
+selectstart
+of
+[
+1
+0
+]
+)
+{
 await
 UpdateSelectEventsOnTextControlsPref
 (
+{
+selectstart
+selectionchange
+:
 true
+}
 )
 ;
 /
@@ -2965,14 +3019,14 @@ elt
 textarea
 "
 )
-50
+40
 "
 mousedown
 "
 0
+1
 0
-0
-0
+1
 )
 ;
 selectstartTarget
@@ -2997,7 +3051,7 @@ textarea
 "
 mousemove
 "
-1
+selectstart
 1
 0
 1
@@ -3048,7 +3102,7 @@ elt
 textarea
 "
 )
-50
+40
 "
 mousemove
 "
@@ -3091,7 +3145,7 @@ elt
 textarea
 "
 )
-50
+40
 "
 mousemove
 "
@@ -3140,7 +3194,7 @@ textarea
 "
 mousemove
 "
-1
+selectstart
 1
 0
 1
@@ -3340,7 +3394,7 @@ textarea
 "
 mousemove
 "
-1
+selectstart
 1
 0
 1
@@ -3365,6 +3419,7 @@ mouseup
 0
 )
 ;
+}
 /
 /
 Marking
