Backed out 5 changesets (bug 1648944) for causing wpt failures in idlharness.window.html. CLOSED TREE
Backed out changeset 598789cabb9f (bug 1648944)
Backed out changeset f464507bef57 (bug 1648944)
Backed out changeset fb2b9ceb7c69 (bug 1648944)
Backed out changeset a73cfada74cf (bug 1648944)
Backed out changeset 3f41877ffd14 (bug 1648944)

UltraBlame original commit: d0153e71497bf81effe83239986d2a5f9c1edaf3

--- a/dom/tests/mochitest/general/frameSelectEvents.html
+++ b/dom/tests/mochitest/general/frameSelectEvents.html
@@ -270,45 +270,6 @@ a
 ;
 }
 /
-*
-*
-*
-param
-{
-Node
-}
-node
-*
-/
-function
-isProperSelectionChangeTarget
-(
-node
-)
-{
-return
-node
-=
-=
-=
-document
-|
-|
-node
-=
-=
-=
-input
-|
-|
-node
-=
-=
-=
-textarea
-;
-}
-/
 /
 The
 main
@@ -359,12 +320,9 @@ null
 ;
 async
 function
-UpdateSelectEventsOnTextControlsPref
+UpdateSelectEventsOntextControlsPref
 (
-{
-selectstart
-selectionchange
-}
+aEnabled
 )
 {
 await
@@ -386,29 +344,9 @@ select_events
 .
 textcontrols
 .
-selectstart
-.
 enabled
 '
-!
-!
-selectstart
-]
-[
-'
-dom
-.
-select_events
-.
-textcontrols
-.
-selectionchange
-.
-enabled
-'
-!
-!
-selectionchange
+aEnabled
 ]
 ]
 }
@@ -416,16 +354,9 @@ selectionchange
 ;
 }
 await
-UpdateSelectEventsOnTextControlsPref
+UpdateSelectEventsOntextControlsPref
 (
-{
-selectstart
-:
 false
-selectionchange
-:
-false
-}
 )
 ;
 document
@@ -513,27 +444,22 @@ function
 aEvent
 )
 {
-ok
-(
-isProperSelectionChangeTarget
+is
 (
 aEvent
 .
-target
-)
+originalTarget
+document
 "
 The
+original
 target
 of
 selectionchange
 should
 be
-one
-of
+the
 document
-input
-or
-textarea
 "
 )
 ;
@@ -2441,26 +2367,10 @@ mouseup
 0
 )
 ;
-for
-(
-const
-selectstart
-of
-[
-1
-0
-]
-)
-{
 await
-UpdateSelectEventsOnTextControlsPref
+UpdateSelectEventsOntextControlsPref
 (
-{
-selectstart
-selectionchange
-:
 true
-}
 )
 ;
 await
@@ -2472,13 +2382,13 @@ elt
 input
 "
 )
-40
+50
 "
 mousedown
 "
 0
-1
-1
+0
+0
 0
 )
 ;
@@ -2504,8 +2414,8 @@ input
 "
 mousemove
 "
-selectstart
 1
+0
 1
 0
 )
@@ -2541,7 +2451,7 @@ input
 mousemove
 "
 0
-1
+0
 1
 0
 )
@@ -2555,12 +2465,12 @@ elt
 input
 "
 )
-40
+50
 "
 mousemove
 "
 0
-1
+0
 1
 0
 )
@@ -2598,7 +2508,7 @@ elt
 input
 "
 )
-40
+50
 "
 mousemove
 "
@@ -2647,8 +2557,8 @@ input
 "
 mousemove
 "
-selectstart
 1
+0
 1
 0
 )
@@ -2752,7 +2662,7 @@ input
 click
 "
 0
-1
+0
 1
 0
 )
@@ -2816,7 +2726,7 @@ input
 mousedown
 "
 0
-1
+0
 1
 0
 )
@@ -2847,8 +2757,8 @@ input
 "
 mousemove
 "
-selectstart
 1
+0
 1
 0
 )
@@ -2872,18 +2782,10 @@ mouseup
 0
 )
 ;
-}
 await
-UpdateSelectEventsOnTextControlsPref
+UpdateSelectEventsOntextControlsPref
 (
-{
-selectstart
-:
 false
-selectionchange
-:
-false
-}
 )
 ;
 /
@@ -2983,26 +2885,10 @@ mouseup
 0
 )
 ;
-for
-(
-const
-selectstart
-of
-[
-1
-0
-]
-)
-{
 await
-UpdateSelectEventsOnTextControlsPref
+UpdateSelectEventsOntextControlsPref
 (
-{
-selectstart
-selectionchange
-:
 true
-}
 )
 ;
 /
@@ -3019,14 +2905,14 @@ elt
 textarea
 "
 )
-40
+50
 "
 mousedown
 "
 0
-1
 0
-1
+0
+0
 )
 ;
 selectstartTarget
@@ -3051,8 +2937,8 @@ textarea
 "
 mousemove
 "
-selectstart
 1
+0
 0
 1
 )
@@ -3088,7 +2974,7 @@ textarea
 mousemove
 "
 0
-1
+0
 0
 1
 )
@@ -3102,12 +2988,12 @@ elt
 textarea
 "
 )
-40
+50
 "
 mousemove
 "
 0
-1
+0
 0
 1
 )
@@ -3145,7 +3031,7 @@ elt
 textarea
 "
 )
-40
+50
 "
 mousemove
 "
@@ -3194,8 +3080,8 @@ textarea
 "
 mousemove
 "
-selectstart
 1
+0
 0
 1
 )
@@ -3299,7 +3185,7 @@ textarea
 click
 "
 0
-1
+0
 0
 1
 )
@@ -3363,7 +3249,7 @@ textarea
 mousedown
 "
 0
-1
+0
 0
 1
 )
@@ -3394,8 +3280,8 @@ textarea
 "
 mousemove
 "
-selectstart
 1
+0
 0
 1
 )
@@ -3419,7 +3305,6 @@ mouseup
 0
 )
 ;
-}
 /
 /
 Marking
