Bug 1705141 - Fix an imperative slotting API test r=smaug
When the manual assigned node is moved to its original root, it should
be assigned again.

Differential Revision: https://phabricator.services.mozilla.com/D119645

UltraBlame original commit: 880b743252983a47de62ef87d89013222595a2db

--- a/testing/web-platform/tests/shadow-dom/imperative-slot-api.html
+++ b/testing/web-platform/tests/shadow-dom/imperative-slot-api.html
@@ -2276,6 +2276,9 @@ assignedNodes
 (
 )
 [
+tTree
+.
+c1
 ]
 )
 ;
@@ -2298,14 +2301,14 @@ shadow
 root
 .
 The
-slot
-remains
-empty
+node
+is
+re
+-
+assigned
 when
 moved
 back
-trigger
-recalc
 .
 '
 )
