Bug 1705141 - Update imperative slotting API tests r=smaug
- Added a new test to ensure the assign slottables step is done in tree order
- Added a new assertion to a test

Differential Revision: https://phabricator.services.mozilla.com/D119442

UltraBlame original commit: f3f3f0a6ac0c4e8259fa3ca25cf5fcfbb494d941

--- a/testing/web-platform/tests/shadow-dom/imperative-slot-api-slotchange.html
+++ b/testing/web-platform/tests/shadow-dom/imperative-slot-api-slotchange.html
@@ -202,6 +202,27 @@ s2
 slot
 >
 <
+div
+>
+<
+slot
+id
+=
+"
+s2
+.
+5
+"
+>
+<
+/
+slot
+>
+<
+/
+div
+>
+<
 slot
 id
 =
@@ -2714,6 +2735,227 @@ bubbles
 ups
 .
 "
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+async
+function
+mutationObserversRun
+(
+)
+{
+return
+new
+Promise
+(
+r
+=
+>
+{
+t
+.
+step_timeout
+(
+r
+0
+)
+;
+}
+)
+;
+}
+let
+tTree
+=
+createTestTree
+(
+test_slotchange
+)
+;
+tTree
+.
+s1
+.
+assign
+(
+tTree
+.
+c1
+)
+;
+tTree
+[
+"
+s2
+.
+5
+"
+]
+.
+assign
+(
+tTree
+.
+c2
+)
+;
+let
+slotChangedOrder
+=
+[
+]
+;
+/
+/
+Clears
+out
+pending
+mutation
+observers
+await
+mutationObserversRun
+(
+)
+;
+tTree
+.
+s1
+.
+addEventListener
+(
+"
+slotchange
+"
+function
+(
+)
+{
+slotChangedOrder
+.
+push
+(
+"
+s1
+"
+)
+;
+}
+)
+;
+tTree
+.
+s3
+.
+addEventListener
+(
+"
+slotchange
+"
+function
+(
+)
+{
+slotChangedOrder
+.
+push
+(
+"
+s3
+"
+)
+;
+}
+)
+;
+tTree
+[
+"
+s2
+.
+5
+"
+]
+.
+addEventListener
+(
+"
+slotchange
+"
+function
+(
+)
+{
+slotChangedOrder
+.
+push
+(
+"
+s2
+.
+5
+"
+)
+;
+}
+)
+;
+tTree
+.
+s3
+.
+assign
+(
+tTree
+.
+c2
+tTree
+.
+c1
+)
+;
+await
+mutationObserversRun
+(
+)
+;
+assert_array_equals
+(
+slotChangedOrder
+[
+"
+s1
+"
+"
+s2
+.
+5
+"
+"
+s3
+"
+]
+)
+;
+}
+'
+Signal
+a
+slot
+change
+should
+be
+done
+in
+tree
+order
+.
+'
 )
 ;
 <
