Bug 1719853 [wpt PR 29618] - Improve tests for extra arguments to getContext()., a=testonly
Automatic update from web-platform-tests
Improve tests for extra arguments to getContext(). (#29618)

--

wpt-commits: 7f5aaca5709faad3f7cb40f79000028ddded078a
wpt-pr: 29618

UltraBlame original commit: c6bb9eabe78f4e8c9f4f9078ad727b9e7e8cf494

--- a/testing/web-platform/tests/html/canvas/offscreen/the-offscreen-canvas/2d.getcontext.extraargs.create.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/the-offscreen-canvas/2d.getcontext.extraargs.create.html
@@ -1,5 +1,12 @@
-/
-/
+<
+!
+DOCTYPE
+html
+>
+<
+!
+-
+-
 DO
 NOT
 EDIT
@@ -21,36 +28,30 @@ gentest
 .
 py
 .
-/
-/
+-
+-
+>
+<
+title
+>
 OffscreenCanvas
 test
-in
-a
-worker
 :
 2d
 .
 getcontext
 .
 extraargs
+.
+create
+<
 /
-/
-Description
-:
-The
-2D
-context
-ignores
-extra
-getContext
-arguments
-/
-/
-Note
-:
-importScripts
-(
+title
+>
+<
+script
+src
+=
 "
 /
 resources
@@ -59,10 +60,32 @@ testharness
 .
 js
 "
-)
-;
-importScripts
-(
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
 "
 /
 html
@@ -77,8 +100,55 @@ tests
 .
 js
 "
+>
+<
+/
+script
+>
+<
+h1
+>
+2d
+.
+getcontext
+.
+extraargs
+.
+create
+<
+/
+h1
+>
+<
+p
+class
+=
+"
+desc
+"
+>
+The
+2D
+context
+doesn
+'
+t
+throw
+with
+extra
+getContext
+arguments
+(
+new
+context
 )
-;
+<
+/
+p
+>
+<
+script
+>
 var
 t
 =
@@ -88,10 +158,18 @@ async_test
 The
 2D
 context
-ignores
+doesn
+'
+t
+throw
+with
 extra
 getContext
 arguments
+(
+new
+context
+)
 "
 )
 ;
@@ -155,19 +233,16 @@ getContext
 '
 )
 ;
-var
-offscreenCanvas2
-=
+_assertDifferent
+(
+(
 new
 OffscreenCanvas
 (
 100
 50
 )
-;
-_assertDifferent
-(
-offscreenCanvas2
+)
 .
 getContext
 (
@@ -186,7 +261,14 @@ false
 )
 null
 "
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -213,7 +295,14 @@ null
 ;
 _assertDifferent
 (
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -224,7 +313,14 @@ getContext
 )
 null
 "
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -241,7 +337,14 @@ null
 ;
 _assertDifferent
 (
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -254,7 +357,14 @@ test
 )
 null
 "
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -275,7 +385,14 @@ null
 ;
 _assertDifferent
 (
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -286,7 +403,14 @@ undefined
 )
 null
 "
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -303,7 +427,14 @@ null
 ;
 _assertDifferent
 (
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -314,7 +445,14 @@ null
 )
 null
 "
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -331,7 +469,14 @@ null
 ;
 _assertDifferent
 (
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -344,7 +489,14 @@ hasInstance
 )
 null
 "
-offscreenCanvas2
+(
+new
+OffscreenCanvas
+(
+100
+50
+)
+)
 .
 getContext
 (
@@ -370,7 +522,7 @@ done
 }
 )
 ;
-done
-(
-)
-;
+<
+/
+script
+>
