--- a/testing/web-platform/tests/html/semantics/embedded-content/the-canvas-element/2d.getcontext.extraargs.cache.html
+++ b/testing/web-platform/tests/html/semantics/embedded-content/the-canvas-element/2d.getcontext.extraargs.cache.html
@@ -42,6 +42,8 @@ test
 getcontext
 .
 extraargs
+.
+cache
 <
 /
 title
@@ -143,6 +145,8 @@ h1
 getcontext
 .
 extraargs
+.
+cache
 <
 /
 h1
@@ -158,10 +162,17 @@ desc
 The
 2D
 context
-ignores
+doesn
+'
+t
+throw
+with
 extra
 getContext
 arguments
+(
+cached
+)
 <
 /
 p
@@ -249,10 +260,17 @@ async_test
 The
 2D
 context
-ignores
+doesn
+'
+t
+throw
+with
 extra
 getContext
 arguments
+(
+cached
+)
 "
 )
 ;
